First commit in forever

--- a/app/main/main_templates/index.html
+++ b/app/main/main_templates/index.html
@@ -1,1 +1,3 @@
-<h1>Hello, Tatyana<\h1>
+<a href="{{ url_for('main.weaponform') }}">Add weapon to db</a>
+</br>
+<a href="{{ url_for('main.typeform') }}">Add weapon type to db</a>
